--- a/package.json
+++ b/package.json
@@ -2,20 +2,30 @@
   "name": "react03-tariff",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://radionadejda.github.io/react03-tariff/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "gh-pages": "^6.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "sass": "^1.69.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "lint": "eslint -c .eslintrc --ext .js,.jsx .",
+    "lint:fix": "npm run lint -- --fix"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/radionadejda/react03-tariff.git"
   },
   "eslintConfig": {
     "extends": [
@@ -36,3 +46,4 @@
     ]
   }
 }
+
